--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -18,4 +18,10 @@
 			padding-right: 12px;
 		}
 	}
+	#sidebar-switch-panel {
+		padding-right: 0;
+		#sidebar-switch-button {
+			padding-right: 0;
+		}
+	}
 }
