--- a/src/scss/_admin.scss
+++ b/src/scss/_admin.scss
@@ -38,6 +38,9 @@
 		&[type=text], &[type=password] {
 			margin-bottom: 18px;
 		}
+		&[type="submit"] {
+			@include components.icon-colored( var(--blue), #fff, var(--blue-700) );
+		}
 	}
 	
 }
