--- a/src/scss/_top-menu.scss
+++ b/src/scss/_top-menu.scss
@@ -1,10 +1,10 @@
 #top-menu {
 	display: grid;
 	grid-template-columns: 1fr auto;
-	padding: 6px 25px;
+	padding: 8px 25px;
 	font-size: 1rem;
 	align-items: center;
-	background-color: #181b34;
+	background-color: #0d1321;
 	// background-color: var(--blue--transparent);
 	& > * {
 		float: none;
@@ -17,11 +17,17 @@
 			float: none;
 			a {
 				margin-right: 0;
+				display: block;
 			}
 		}
 	}
 	a {
 		font-weight: 300;
+		transition: color 0.2s;
+		&:hover {
+			color: #748cab;
+			text-decoration: none;
+		}
 		// color: var(--blue);
 	}
 	#loggedas {
