--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -11,7 +11,7 @@
 @mixin button {
 	height: auto;
 	padding: 6px 12px;
-	border-radius: 4px;
+	border-radius: var(--input--border--radius);
 	color: var(--blue);
 	border: 1px solid var(--blue);
 	background: #fff; // var(--grey);
@@ -44,12 +44,14 @@
 	svg {
 		stroke: #fff;
 	}
-	&:hover {
-		color: #fff;
-		text-decoration: none;
-		background-color: var(--green-dark);
-		svg {
-			stroke: #fff;
+	&:is(a) {
+		&:hover {
+			color: #fff;
+			text-decoration: none;
+			background-color: var(--green-dark);
+			svg {
+				stroke: #fff;
+			}
 		}
 	}
 }
@@ -69,13 +71,20 @@
 			stroke: $colorSecondary;
 		}
 	}
+	&:is(a) {
+		&:hover {
+			svg {
+				stroke: $colorSecondary;
+			}
+		}
+	}
 }
 
 @mixin input-wrapper {
 	font-family: "Roboto", sans-serif;
 	height: 32px;
 	padding: 6px 6px 6px 6px;
-	border-radius: 4px;
+	border-radius: var(--input--border--radius);
 	background: #fff;
 	font-weight: 400;
 	font-size: 0.875rem;
@@ -86,13 +95,16 @@
 	&.autocomplete {
 		padding-left: 6px !important;
 	}
+	&[type="file"] {
+		height: 35px;
+	}
 }
 
 @mixin select-wrapper {
 	font-family: "Roboto", sans-serif;
 	height: auto;
 	padding: 6px 6px 6px 6px;
-	border-radius: 4px;
+	border-radius: var(--input--border--radius);
 	background: #fff;
 	font-weight: 400;
 	font-size: 0.875rem;
@@ -117,7 +129,6 @@
 		}
 	}
 	&.icon-add {
-		// @include icon-green;
 		@include icon-colored( var(--green), #fff, var(--green-dark) );
 	}
 	&.icon-checked {
@@ -161,15 +172,26 @@ fieldset {
 	}
 }
 
-.nodata, .warning {
-	padding-top: 16px;
-	padding-bottom: 16px;
-	border-radius: 4px;
+@mixin alert {
+	padding: 16px 32px;
+	border-radius: var(--input--border--radius);
+	font-size: 1rem;
+	svg.icon-svg {
+		margin-left: 0;
+	}
+}
+
+#errorExplanation, 
+div.flash, 
+.nodata, 
+.warning, 
+.conflict {
+	@include alert;
 }
 
 @mixin wiki {
 	width: auto;
-	border-radius: 4px;
+	border-radius: var(--input--border--radius);
 	& > * {
 		&:first-child {
 			margin-top: 0;
@@ -182,6 +204,7 @@ fieldset {
 		padding: 0 !important;
 		margin: 0.8em 0;
 		font-size: 1rem;
+		display: block;
 	}
 	pre {
 		margin-left: 0;
@@ -243,13 +266,70 @@ fieldset {
 	}
 }
 
+@mixin card {
+	border-radius: 12px;
+	padding: 16px;
+}
+
 .box {
+	@include card;
 	p {
 		margin: 0.5em 0;
 	}
 	& > * {
 		&:last-child {
 			margin-bottom: 0;
+		}
+	}
+}
+
+@mixin query-totals {
+	font-size: 0.875rem;
+	display: block;
+	float: none;
+	padding-top: 10px;
+}
+
+.controller-timelog {
+	.query-totals {
+		@include query-totals;
+	}
+}
+
+@mixin context-menu {
+	z-index: 100;
+	ul {
+		padding: 0;
+		li {
+			a {
+				height: auto;
+				padding: 6px 12px;
+				border-radius: 0;
+				color: var(--blue);
+				background: #fff;
+				font-weight: 500;
+				font-size: 0.875rem;
+				line-height: 1.2em;
+				letter-spacing: 0;
+				text-transform: none;
+				text-decoration: none;
+				display: inline-flex;
+				align-items: center;
+				gap: 2px;
+				transition: all 0.2s;
+			}
+		}
+	}
+	&.reverse-x {
+		ul {
+			li {
+				&.folder {
+					& > ul {
+						right: 144px;
+						bottom: -1px;
+					}
+				}
+			}
 		}
 	}
 }
